--- a/src/components/PlayerStat/index.scss
+++ b/src/components/PlayerStat/index.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/variables";
 
 .playerStat {
-  width: 8em;
+  width: 10em;
 
   display: flex;
   flex-direction: row;
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 6em;
+    width: 8em;
 
     &-name {
       padding: 0px;
